--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,14 +1,13 @@
 .card {
   display: flex;
   flex-direction: column;
+  position: relative;
   gap: 75px;
-  min-width: 300px;
+  width: 300px;
   list-style-type: none;
 }
 
 .card__item {
-  display: flex;
-  flex-direction: column;
   border: 3px grey solid;
   padding: 20px;
   min-height: 200px;
@@ -34,4 +33,38 @@
 
 .list__smile {
   padding-right: 10px;
+}
+
+.list__button {
+  border: 0;
+  background-color: #2564a7;
+  width: 110px;
+  height: 40px;
+  border: 2px solid #fff;
+  color: #fff;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  border-radius: 10px;
+  letter-spacing: 1.9px;
+  font-size: 11px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* Добавление плавного эффекта раскрытия списка */
+.list {
+  max-height: 100px;
+  /* Начальная высота */
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
+}
+
+.list--expanded {
+  max-height: 500px;
+  /* Увеличьте до достаточного размера, чтобы вместить весь контент */
+}
+
+.list--collapsed {
+  max-height: 100px;
+  /* Высота в свернутом состоянии */
 }
