--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   position: relative;
   gap: 75px;
-  width: 400px;
+  width: calc(100% - 40px);
   min-height: 250px;
   /* Унифицированная минимальная высота */
 }
